# 50-years

./: .gitignore  README.md  compose.yml  pyproject.toml
src/app/: Dockerfile  pyproject.toml
src/app/src/: main.py
src/aws/: init-aws.sh
